# claude_work1

./: .env.example  CLAUDE.md  README.md  pronpt.md  pyproject.toml  report.md
.claudeignore/: pronpt.md
app/: config.py  constants.py  main.py  models.py
app/analysis/: buzz_score.py  trend_detector.py
app/collectors/: qiita_collector.py  reddit_collector.py
app/llm/: budget.py  classifier.py  client.py  prompts.py  summarizer.py
app/normalizers/: base.py  qiita_normalizer.py  reddit_normalizer.py
app/preprocessing/: cleaner.py  dedup.py  ranking.py
app/reporting/: markdown_report.py
app/storage/: db.py  models.py  repositories.py
app/utils/: logging.py
data/: trends.db
tests/: test_gemini_client.py  test_pipeline.py  test_qiita_collector.py  test_reddit_collector.py  test_summarizer.py  test_tag_normalize.py
