[project]
name = "ai-trend-analyzer"
version = "0.1.0"
description = "AI開発トレンド分析ツール MVP"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
trend = "app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
